Creating Classes Component

--- a/src/Components/OurStory/OurStory.module.css
+++ b/src/Components/OurStory/OurStory.module.css
@@ -1,5 +1,31 @@
 .section {
   background-color: var(--color-bg-one);
+  /* clip-path: polygon(
+    0 100%,
+    5% 100%,
+    5% calc(100% - 30px),
+    15% calc(100% - 30px),
+    15% 100%,
+    25% 100%,
+    25% calc(100% - 30px),
+    35% calc(100% - 30px),
+    35% 100%,
+    45% 100%,
+    45% calc(100% - 30px),
+    55% calc(100% - 30px),
+    55% 100%,
+    65% 100%,
+    65% calc(100% - 30px),
+    75% calc(100% - 30px),
+    75% 100%,
+    85% 100%,
+    85% calc(100% - 30px),
+    95% calc(100% - 30px),
+    95% 100%,
+    100% 100%,
+    100% 0,
+    0% 0
+  ); */
 }
 
 .sectionContainer {
