--- a/src/Components/Testimonials/Testimonials.module.css
+++ b/src/Components/Testimonials/Testimonials.module.css
@@ -4,7 +4,7 @@
 }
 
 .testimonials {
-  height: 85vh;
+  min-height: 95vh;
   background-image: linear-gradient(
       0,
       rgba(0, 0, 0, 0.5),
